[tool.poetry]
name = "tmdb-calls"
version = "0.1.0"
description = ""
authors = ["szymonsztreja <s26048@pjwstk.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
cinemagoer = "^2023.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
