[tool.poetry]
name = "tmdb-calls"
version = "0.1.0"
description = ""
authors = ["szymonsztreja <s26048@pjwstk.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cinemagoer = "^2023.5.1"
requests = "^2.32.3"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
